# 2dof-traj

./: .gitignore  BUILD.md  LICENSE  README.md  build_binary.py  pyproject.toml  requirements-build.txt  requirements.txt  run_gui.py  run_pose_only.py
src/dof2_trajectory_gui/: __init__.py  controller.py  gui.py  gui_pose_only.py  kinematics.py  main.py  main_pose_only.py  robot_interface.py  trajectory.py
