[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dof2-trajectory-planner"
version = "0.1.0"
description = "2-DOF trajectory planning GUI on x-z plane"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "PySide6>=6.6",
  "pyqtgraph>=0.13",
]
authors = [
  { name = "chan" }
]
keywords = ["robotics", "trajectory-planning", "inverse-kinematics", "gui"]


[project.scripts]
dof2-traj-gui = "dof2_trajectory_gui.main:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

